Show all folders if there is less than 6

--- a/js/templates/account.html
+++ b/js/templates/account.html
@@ -35,7 +35,7 @@
 
 <div class="folders"></div>
 {{#unless isUnifiedInbox}}
-{{#if hasFolders}}
+{{#if hasCollapseFoldersButton}}
 <li class="account-toggle-collapse">
 	<a>{{toggleCollapseMessage}}</a>
 </li>
