Dark theme: Fix navigation icons
Signed-off-by: Jan-Christoph Borchardt <hey@jancborchardt.net>

--- a/css/mail.scss
+++ b/css/mail.scss
@@ -328,25 +328,25 @@
 
 /* icons */
 .icon-inbox {
-	background-image: url('../img/inbox.svg');
+	@include icon-color('inbox', 'mail', $color-black);
 }
 .icon-flagged {
-	background-image: url('../img/star.svg');
+	@include icon-color('star', 'mail', $color-black);
 }
 .icon-drafts {
-	background-image: url('../img/drafts.svg');
+	@include icon-color('drafts', 'mail', $color-black);
 }
 .icon-sent {
-	background-image: url('../img/sent.svg');
+	@include icon-color('sent', 'mail', $color-black);
 }
 .icon-archive {
-	background-image: url('../img/archive.svg');
+	@include icon-color('archive', 'mail', $color-black);
 }
 .icon-junk {
-	background-image: url('../img/junk.svg');
+	@include icon-color('junk', 'mail', $color-black);
 }
 .icon-trash {
-	background-image: url('../img/trash.svg');
+	@include icon-color('trash', 'mail', $color-black);
 }
 
 
