--- a/css/mail.scss
+++ b/css/mail.scss
@@ -290,12 +290,13 @@
 	height: 90px;
 	z-index: 100;
 	position: fixed; // ie fallback
+	position: -webkit-sticky; // ios/safari fallback
 	position: sticky;
 	top: $header-height;
-	background: -webkit-linear-gradient(var(--color-main-background) , var(--color-main-background) 80%, rgba(255,255,255,0));
-	background: -o-linear-gradient(var(--color-main-background) , var(--color-main-background)  80%, rgba(255,255,255,0));
-	background: -moz-linear-gradient(var(--color-main-background) , var(--color-main-background)  80%, rgba(255,255,255,0));
-	background: linear-gradient(var(--color-main-background) , var(--color-main-background)  80%, rgba(255,255,255,0));
+	background: -webkit-linear-gradient(var(--color-main-background), var(--color-main-background) 80%, rgba(255,255,255,0));
+	background: -o-linear-gradient(var(--color-main-background), var(--color-main-background)  80%, rgba(255,255,255,0));
+	background: -moz-linear-gradient(var(--color-main-background), var(--color-main-background)  80%, rgba(255,255,255,0));
+	background: linear-gradient(var(--color-main-background), var(--color-main-background)  80%, rgba(255,255,255,0));
 }
 
 .transparency {
@@ -349,8 +350,9 @@
 	@include icon-color('trash', 'mail', $color-black);
 }
 
-
-
+@include icon-black-white('reply', 'mail', 1);
+@include icon-black-white('reply-all', 'mail', 1);
+@include icon-black-white('forward', 'mail', 1);
 
 // FIXES for core apps.scss
 
