Make it possible to mark messages important
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/css/mail.scss
+++ b/css/mail.scss
@@ -331,6 +331,9 @@
 .icon-drafts {
 	@include icon-color('drafts', 'mail', $color-black);
 }
+.icon-important {
+	@include icon-color('important', 'mail', $color-black);
+}
 .icon-sent {
 	@include icon-color('sent', 'mail', $color-black);
 }
