Use relevant icon-important for the action
Signed-off-by: Jan-Christoph Borchardt <hey@jancborchardt.net>

--- a/css/mail.scss
+++ b/css/mail.scss
@@ -325,6 +325,9 @@
 .icon-inbox {
 	@include icon-color('inbox', 'mail', $color-black);
 }
+.icon-important {
+	@include icon-color('important', 'mail', $color-black);
+}
 .icon-flagged {
 	@include icon-color('star', 'mail', $color-black);
 }
