--- a/css/mail.scss
+++ b/css/mail.scss
@@ -5,7 +5,7 @@
  */
 .loading {
 	position: absolute;
-	left: 50%;
+	inset-inline-start: 50%;
 	top: 50%;
 }
 
@@ -15,8 +15,7 @@
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	left: 0;
-	right: 0;
+	inset-inline: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -46,6 +45,7 @@
 	margin: 0 auto;
 	padding-top: 30px;
 }
+
 #mail-settings {
 	#account-form {
 		margin: 0;
@@ -67,13 +67,15 @@
 		margin-top: 10vh;
 	}
 }
+
 #account-form h2 {
 	text-align: center;
 	position: relative;
 	width: 300%;
-	left: -100%;
+	inset-inline-start: -100%;
 	margin-bottom: 20px;
 }
+
 #account-form input {
 	width: 100%;
 	box-sizing: border-box;
@@ -81,8 +83,8 @@
 
 #account-form .toggle-manual-mode {
 	background-position: right;
-	padding-right: 16px;
-	margin-left: 6px;
+	padding-inline-end: 16px;
+	margin-inline-start: 6px;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
 	opacity: .3;
 }
@@ -91,7 +93,7 @@
 #setup-smtp-ssl-mode {
 	position: absolute;
 	top: 0;
-	right: 0;
+	inset-inline-end: 0;
 	margin: 0;
 	background-color: transparent;
 	border: none;
@@ -101,10 +103,8 @@
 #connect-loading {
 	position: absolute;
 	top: 206px;
-	left: 0;
-	right: 0;
-	margin-left: auto;
-	margin-right: auto;
+	inset-inline: 0;
+	margin-inline: auto;
 	height: 30px;
 }
 
@@ -127,6 +127,7 @@
 .app-navigation .special-trash .collapse {
 	display: none !important;
 }
+
 .app-navigation .special-inbox:hover .collapse,
 .app-navigation .special-inbox:focus .collapse,
 .app-navigation .special-drafts:hover .collapse,
@@ -146,9 +147,11 @@
 #mail-messages #emptycontent.emptycontent-search {
 	position: static;
 }
+
 #mail-messages #emptycontent.emptycontent-search h2 {
 	line-height: 150%;
 }
+
 #mail-messages #emptycontent {
 	position: absolute;
 }
@@ -164,6 +167,7 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+
 .mail-account-email:first-child {
 	display: none;
 }
@@ -178,21 +182,24 @@
 .mailaccount-list li {
 	padding: 10px 0;
 }
+
 .mailaccount-list .mail-account-name {
 	display: inline-block;
 	width: 90%;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+
 .mailaccount-list .actions {
 	display: inline-flex;
 	position: absolute;
-	right: 0;
+	inset-inline-end: 0;
 	min-height: 16px;
 	min-width: 16px;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
-	opacity: .25;
+	opacity: .5;
 }
+
 .mailaccount-list .actions:hover,
 .mailaccount-list .actions:focus {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
@@ -208,8 +215,9 @@
 	height: 100%;
 	overflow-x: hidden;
 	overflow-y: auto;
-	border-right: 1px solid var(--color-border);
+	border-inline-end: 1px solid var(--color-border);
 }
+
 #mail-message-list-loading {
 	position: sticky;
 	height: 40px;
@@ -224,6 +232,7 @@
 	background-color: var(--color-success);
 	padding: 3px;
 }
+
 .app-navigation .msg.error {
 	color: #fff;
 	background-color: var(--color-error);
@@ -239,20 +248,23 @@
 	align-items: center;
 	border: none;
 }
+
 .ui-autocomplete .ui-menu-item a.mail-recipient-autocomplete span {
-	margin-left: 10px;
+	margin-inline-start: 10px;
 }
+
 .ui-autocomplete {
-	padding-left: 16px !important;
+	padding-inline-start: 16px !important;
 	border-radius: 0 !important;
-	border-left: none;
-	border-right: none;
+	border-inline-start: none;
+	border-inline-end: none;
 	z-index: 1000;
 }
 
 .icon-starred[data-starred="false"]:hover {
 	background-image: var(--icon-star-dark-fc0) !important;
 }
+
 .icon-starred[data-starred="false"]:not(:hover) {
 	background-image: var(--icon-star-000) !important;
 }
@@ -270,7 +282,7 @@
 	background-size: 16px;
 	display: inline-block;
 	position: absolute;
-	left: 16px;
+	inset-inline-start: 16px;
 	top: 28px;
 	z-index: 10;
 }
@@ -280,6 +292,7 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 	opacity: .3;
 }
+
 .star.icon-star:hover,
 .star.icon-star:focus {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
@@ -304,17 +317,6 @@
 	margin: 0 auto;
 }
 
-/* settings */
-.mailaccount-list .mail-account-name {
-	display: inline-block;
-	width: 90%;
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-.mailaccount-list .actions {
-	opacity: .5;
-}
-
 // FIXES for core apps.scss
 
 .app-navigation {
@@ -322,109 +324,14 @@
 		> .navigation-account > li,
 		> .navigation-account > .folders > li,
 		> .navigation-account > .folders > li > .folders > .folders > li {
+			position: relative;
+			width: 100%;
+			box-sizing: border-box;
 			display: inline-flex;
 			flex-wrap: wrap;
 			order: 1;
 			flex-shrink: 0;
 
-			/* Pinned-to-bottom entries */
-			&.pinned {
-				order: 2;
-				&.first-pinned {
-					margin-top: auto !important;
-				}
-			}
-
-			> a,
-			> .app-navigation-entry-deleted {
-				/* Ugly hack for overriding the main entry link */
-				padding-left: 44px !important;
-			}
-			> .app-navigation-entry-edit {
-				/* Ugly hack for overriding the main entry link */
-				/* align the input correctly with the link text
-				   44px-6px padding for the input */
-				padding-left: 38px !important;
-			}
-
-			&:focus,
-			&:hover,
-			&.active,
-			a.selected {
-				&,
-				> a {
-					opacity: 1;
-					box-shadow: inset 2px 0 var(--color-primary-element);
-				}
-			}
-
-			/* align loader */
-			&.icon-loading-small:after {
-				left: 22px;
-				top: 22px;
-			}
-
-			/* hide and animate deletion/collapse of subitems */
-			&.deleted,
-			&.collapsible:not(.open) {
-				> ul,
-				> .folders {
-					opacity: 0;
-					max-height: 0;
-					/* bezier override the hide/slow effect due to the 2000 max-height */
-					transition: max-height 1000ms cubic-bezier(0, 1, 0, 1),
-								opacity 250ms ease-in-out;
-				}
-			}
-
-			/* Second level nesting for lists */
-			> ul {
-				flex: 1 0 100%;
-				padding-left: 62px;
-				width: inherit;
-				transition: max-height 2000ms ease-in-out,
-							opacity 250ms ease-in-out;
-				max-height: 9999px;
-				opacity: 1;
-				> li {
-					display: inline-flex;
-					flex-wrap: wrap;
-					&:focus,
-					&:hover,
-					&.active,
-					a.selected {
-						&,
-						> a {
-							opacity: 1;
-						}
-					}
-
-					/* align loader */
-					&.icon-loading-small:after {
-						left: -10px;
-					}
-
-					/* Submenu fix for icon */
-					> a[class*='icon-'],
-					> a[style*='background-image'],
-					.app-navigation-entry-bullet {
-						margin-left: -32px; /* 44px padding - 12px padding */
-					}
-
-					/* Submenu fix for bullet */
-					> .app-navigation-entry-bullet {
-						left: -32px;/* 44px padding - 12px padding */
-					}
-				}
-			}
-		}
-		/* Menu and submenu */
-		> .navigation-account > li,
-		> .navigation-account > .folders > li,
-		> .navigation-account > .folders > li > .folders > .folders > li {
-			position: relative;
-			width: 100%;
-			box-sizing: border-box;
 			/* hide icons if loading */
 			&.icon-loading-small {
 				> a,
@@ -452,9 +359,8 @@
 				z-index: 100; /* above the bullet */
 				/* TODO: forbid using img as icon in menu? */
 				&:first-child img {
-				    margin-right: 11px;
+				    margin-inline: -30px 11px;
 				    width: 16px;
-				    margin-left: -30px;
 				}
 			}
 
@@ -473,6 +379,97 @@
 			/* popover fix the flex positionning of the li parent */
 			> .app-navigation-entry-menu {
 				top: 44px;
+			}
+
+			/* Pinned-to-bottom entries */
+			&.pinned {
+				order: 2;
+				&.first-pinned {
+					margin-top: auto !important;
+				}
+			}
+
+			> a,
+			> .app-navigation-entry-deleted {
+				/* Ugly hack for overriding the main entry link */
+				padding-inline-start: 44px !important;
+			}
+			> .app-navigation-entry-edit {
+				/* Ugly hack for overriding the main entry link */
+				/* align the input correctly with the link text
+				   44px-6px padding for the input */
+				padding-inline-start: 38px !important;
+			}
+
+			&:focus,
+			&:hover,
+			&.active,
+			a.selected {
+				&,
+				> a {
+					opacity: 1;
+					box-shadow: inset 2px 0 var(--color-primary-element);
+				}
+			}
+
+			/* align loader */
+			&.icon-loading-small:after {
+				inset-inline-start: 22px;
+				top: 22px;
+			}
+
+			/* hide and animate deletion/collapse of subitems */
+			&.deleted,
+			&.collapsible:not(.open) {
+				> ul,
+				> .folders {
+					opacity: 0;
+					max-height: 0;
+					/* bezier override the hide/slow effect due to the 2000 max-height */
+					transition: max-height 1000ms cubic-bezier(0, 1, 0, 1),
+								opacity 250ms ease-in-out;
+				}
+			}
+
+			/* Second level nesting for lists */
+			> ul {
+				flex: 1 0 100%;
+				padding-inline-start: 62px;
+				width: inherit;
+				transition: max-height 2000ms ease-in-out,
+							opacity 250ms ease-in-out;
+				max-height: 9999px;
+				opacity: 1;
+				> li {
+					display: inline-flex;
+					flex-wrap: wrap;
+					&:focus,
+					&:hover,
+					&.active,
+					a.selected {
+						&,
+						> a {
+							opacity: 1;
+						}
+					}
+
+					/* align loader */
+					&.icon-loading-small:after {
+						inset-inline-start: -10px;
+					}
+
+					/* Submenu fix for icon */
+					> a[class*='icon-'],
+					> a[style*='background-image'],
+					.app-navigation-entry-bullet {
+						margin-inline-start: -32px; /* 44px padding - 12px padding */
+					}
+
+					/* Submenu fix for bullet */
+					> .app-navigation-entry-bullet {
+						inset-inline-start: -32px;/* 44px padding - 12px padding */
+					}
+				}
 			}
 		}
 	}
