--- a/src/directives/drag-and-drop/styles/draggable-envelope.scss
+++ b/src/directives/drag-and-drop/styles/draggable-envelope.scss
@@ -7,19 +7,20 @@
 	pointer-events: none;
 	cursor: default;
 }
+
 .draggable-envelope-ghost {
 	height: auto;
 	width: 300px;
 
 	&--counter {
 		position: absolute;
-		left: -40px;
+		inset-inline-start: -40px;
 		background-color: var(--color-primary-element);
 		color: #fff;
 		font-weight: bold;
 		text-align: center;
 		display: inline-block;
-		margin-right: 10px;
+		margin-inline-end: 10px;
 		border-top-left-radius: 20px;
 		border-bottom-left-radius: 20px;
 		width: 10px;
@@ -33,10 +34,10 @@
 			white-space: nowrap;
 			overflow: hidden;
 			width: 100%;
-			text-align: left;
+			text-align: start;
 			margin-bottom: 1px;
 			background-color: #fff;
-			border-left: 2px solid var(--color-primary-element);
+			border-inline-start: 2px solid var(--color-primary-element);
 
 			&:first-child {
 				border-top-right-radius: 20px;
