--- a/src/directives/drag-and-drop/styles/draggable-envelope.scss
+++ b/src/directives/drag-and-drop/styles/draggable-envelope.scss
@@ -21,8 +21,8 @@
 		text-align: center;
 		display: inline-block;
 		margin-inline-end: 10px;
-		border-top-left-radius: 20px;
-		border-bottom-left-radius: 20px;
+		border-start-start-radius: 20px;
+		border-end-start-radius: 20px;
 		width: 10px;
 		padding: 8px 15px;
 	}
@@ -40,14 +40,14 @@
 			border-inline-start: 2px solid var(--color-primary-element);
 
 			&:first-child {
-				border-top-right-radius: 20px;
+				border-start-end-radius: 20px;
 			}
 			&:last-child {
-				border-bottom-right-radius: 20px;
-				border-bottom-left-radius: 20px;
+				border-end-end-radius: 20px;
+				border-end-start-radius: 20px;
 			}
 			&:only-child {
-				border-bottom-left-radius: 0;
+				border-end-start-radius: 0;
 			}
 		}
 	}
